fix: font not showing on deployment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer base {
-  @font-face {
-    font-family: Calibre;
-    font-weight: 400;
-    src: url(/fonts/CalibreRegular.otf) format("otf");
-  }
-  @font-face {
-    font-family: Calibre;
-    font-weight: 500;
-    src: url(/fonts/CalibreMedium.otf) format("otf");
-  }
-}
